## A configure script
## $Id$

AC_PREREQ(2.13)
AC_INIT()

dnl "stolen" from livedocs:
AC_ARG_WITH(php,[  --with-php[=PATH]          Look for PHP executable needed for docweb scripts],
[
  if test $withval != "yes"; then
    AC_MSG_CHECKING([for php])
    if test -x $withval; then
      PHP=$withval
      AC_MSG_RESULT($PHP)
    else
      PHP=no
      AC_MSG_RESULT(no)
      AC_MSG_ERROR([$withval: not an executable file])
    fi
  else
    if test -e ../phpdoc-tools/php.bat ; then
      AC_MSG_CHECKING([for php])
      PHP=../phpdoc-tools/php.bat
      AC_MSG_RESULT($PHP)
    else
      AC_PATH_PROG(PHP,"php",no)
      if test $PHP = "no"; then
        AC_PATH_PROG(PHP4,"php4",no)
        PHP=$PHP4
      fi
    fi
  fi
],[
  if test -e ../phpdoc-tools/php.bat ; then
    AC_MSG_CHECKING([for php])
    PHP=../phpdoc-tools/php.bat
    AC_MSG_RESULT($PHP)
  else
    AC_PATH_PROG(PHP,"php",no)
    if test $PHP = "no"; then
      AC_PATH_PROG(PHP4,"php4",no)
      PHP=$PHP4
    fi
  fi
]
)
if test $PHP = "no"; then
  AC_MSG_ERROR([no PHP binary found])
fi

AC_ARG_WITH(cron-dir,[  --with-cron-dir[=DIR]      CRON scripts location  [default=`pwd`/cron]],
  [CRONDIR="$withval"],
  [CRONDIR="`pwd`/cron"])

AC_ARG_WITH(cvs-dir,[  --with-cvs-dir[=DIR]       CVS checkout location  [default=`pwd`/cvs]],
  [CVSDIR="$withval"],
  [CVSDIR="`pwd`/cvs"])

AC_ARG_WITH(scripts-dir,[  --with-scripts-dir[=DIR]   Scripts location  [default=`pwd`/scripts]],
  [SCRIPTSDIR="$withval"],
  [SCRIPTSDIR="`pwd`/scripts"])

AC_ARG_WITH(sql-dir,[  --with-sql-dir[=DIR]       SQL source location  [default=`pwd`/sql]],
  [SQLDIR="$withval"],
  [SQLDIR="`pwd`/sql"])

AC_ARG_WITH(sqlite-dir,[  --with-sqlite-dir[=DIR]    SQLite repository location  [default=`pwd`/sqlite]],
  [SQLITEDIR="$withval"],
  [SQLITEDIR="`pwd`/sqlite"])

DOCWEB=`pwd`

AC_SUBST(CRONDIR)
AC_SUBST(CVSDIR)
AC_SUBST(DOCWEB)
AC_SUBST(SCRIPTSDIR)
AC_SUBST(SQLDIR)
AC_SUBST(SQLITEDIR)

AC_OUTPUT(build-ops.php build-ops)

dnl vim:et:sw=2:ts=2

