## A configure script
## $Id$

AC_PREREQ(2.13)
AC_INIT()
DOCWEB_CONFIG_NICE(config.nice)

dnl "stolen" from livedocs:
AC_ARG_WITH(php,[  --with-php[=PATH]          Look for PHP executable needed for docweb scripts],
[
  if test $withval != "yes"; then
    AC_MSG_CHECKING([for php])
    if test -x $withval; then
      PHP=$withval
      AC_MSG_RESULT($PHP)
    else
      PHP=no
      AC_MSG_RESULT(no)
      AC_MSG_ERROR([$withval: not an executable file])
    fi
  else
    if test -e ../phpdoc-tools/php.bat ; then
      AC_MSG_CHECKING([for php])
      PHP=../phpdoc-tools/php.bat
      AC_MSG_RESULT($PHP)
    else
      AC_PATH_PROG(PHP,"php",no)
      if test $PHP = "no"; then
        AC_PATH_PROG(PHP4,"php4",no)
        PHP=$PHP4
      fi
    fi
  fi
],[
  if test -e ../phpdoc-tools/php.bat ; then
    AC_MSG_CHECKING([for php])
    PHP=../phpdoc-tools/php.bat
    AC_MSG_RESULT($PHP)
  else
    AC_PATH_PROG(PHP,"php",no)
    if test $PHP = "no"; then
      AC_PATH_PROG(PHP4,"php4",no)
      PHP=$PHP4
    fi
  fi
]
)
if test $PHP = "no"; then
  AC_MSG_ERROR([no PHP binary found])
fi

AC_ARG_WITH(cron-dir,[  --with-cron-dir[=DIR]      CRON scripts location  [default=`pwd`/cron]],
  [CRONDIR="$withval"],
  [CRONDIR="`pwd`/cron/"])

AC_ARG_WITH(svn-dir,[  --with-svn-dir[=DIR]       SVN root location  [default=`pwd`/svn]],
  [SVNDIR="$withval"],
  [SVNDIR="`pwd`/svn/"])

AC_ARG_WITH(phpdoc-dir,[  --with-phpdoc-dir[=DIR]  The phpdoc-all folder (under SVN root) [default=phpdoc-all]],
  [DOCDIR="$withval"],
  [DOCDIR="phpdoc-all"])

AC_ARG_WITH(gtk-doc-dir,[  --with-gtk-doc-dir[=DIR]  The gtk-doc-dir folder (under SVN root) [default=php-gtk-doc]],
  [GTKDIR="$withval"],
  [GTKDIR="php-gtk-doc"])

AC_ARG_WITH(peardoc-dir,[  --with-peardoc-dir[=DIR]  The peardoc folder (under SVN root) [default=peardoc]],
  [PEARDIR="$withval"],
  [PEARDIR="peardoc"])

AC_ARG_WITH(scripts-dir,[  --with-scripts-dir[=DIR]   Scripts location  [default=`pwd`/scripts]],
  [SCRIPTSDIR="$withval"],
  [SCRIPTSDIR="`pwd`/scripts/"])

AC_ARG_WITH(sql-dir,[  --with-sql-dir[=DIR]       SQL source location  [default=`pwd`/sql]],
  [SQLDIR="$withval"],
  [SQLDIR="`pwd`/sql/"])

AC_ARG_WITH(sqlite-dir,[  --with-sqlite-dir[=DIR]    SQLite repository location  [default=`pwd`/sqlite]],
  [SQLITEDIR="$withval"],
  [SQLITEDIR="`pwd`/sqlite/"])

AC_ARG_WITH(files-dir,[  --with-files-dir[=DIR]     'files' location (for RFC, etc)  [default=`pwd`/files]],
  [FILESDIR="$withval"],
  [FILESDIR="`pwd`/files/"])

AC_ARG_WITH(src-dir,[  --with-src-dir[=DIR]       php-src (HEAD) location  [default=`pwd`/php-src]],
  [SRCDIR="$withval"],
  [SRCDIR="`pwd`/php-src/"])


AC_ARG_WITH(www-user,[  --with-www-user[=USER]     Web Server user  [default=`whoami`]],
  [WWWUSER="$withval"],
  [WWWUSER="`whoami`"])

AC_ARG_WITH(www-group,[  --with-www-group[=GROUP]   Web Server group  [default=`groups | cut -d" " -f1`]],
  [WWWGROUP="$withval"],
  [WWWGROUP="`groups | cut -d" " -f1`"])

AC_ARG_WITH(phd,[  --with-phd[=URL]           URL to PhD mirror  [default=http://docs.php.net/]],
  [PHD="$withval"],
  [PHD="http://docs.php.net/"])

DOCWEB=`pwd`

if test `uname|grep CYGWIN` ; then
  PHP=`cygpath -m $PHP`
  CRONDIR=`cygpath -m $CRONDIR`
  SVNDIR=`cygpath -m $SVNDIR`
  DOCWEB=`cygpath -m $DOCWEB`
  SCRIPTSDIR=`cygpath -m $SCRIPTSDIR`
  SQLDIR=`cygpath -m $SQLDIR`
  SQLITEDIR=`cygpath -m $SQLITEDIR`
  FILESDIR=`cygpath -m $FILESDIR`
  SRCDIR=`cygpath -m $SRCDIR`
fi


AC_SUBST(PHP)
AC_SUBST(CRONDIR)
AC_SUBST(SVNDIR)
AC_SUBST(DOCDIR)
AC_SUBST(GTKDIR)
AC_SUBST(PEARDIR)
AC_SUBST(DOCWEB)
AC_SUBST(SCRIPTSDIR)
AC_SUBST(SQLDIR)
AC_SUBST(SQLITEDIR)
AC_SUBST(FILESDIR)
AC_SUBST(SRCDIR)
AC_SUBST(WWWUSER)
AC_SUBST(WWWGROUP)
AC_SUBST(PHD)

AC_OUTPUT(build-ops.php build-ops)

dnl vim:et:sw=2:ts=2

